copy edited 01.08 overscan

--- a/notebooks/01.08-Overscan.ipynb
+++ b/notebooks/01.08-Overscan.ipynb
@@ -11,13 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The overscan region of a CCD, if it is present, is a part of the chip that is covered. Depending on the camera, it can be a useful way to remove small variations in the bias level from frame to frame.\n",
+    "The overscan region of a CCD, if present, is a part of the chip that is covered. Depending on the camera, it can be a useful way to remove small variations in the bias level from frame to frame.\n",
     "\n",
-    "However, whether the overscan is useful depends on the camera. It is advisable to examine the overscan part of the camera you are using before deciding whether to include it in image reduction.\n",
+    "However, whether or not the overscan is useful depends on the camera. It's advisable to examine the overscan part of the camera you're using before deciding if you should include it in image reduction.\n",
     "\n",
-    "One important note: *overscan always includes bias, read noise and dark current*. The overscan pixels are still pixels, and just like any other pixel includes dark current and is subject to read noise. Many sources describe overscan as correcting for bias; if the dark current for the camera is negligble, as it often is for cryogenically cooled cameras, then the overscan is essentially bias.\n",
+    "One important note: *overscan always includes bias, read noise, and dark current*. The overscan pixels are still pixels, and just like any other pixel includes dark current and is subject to read noise. Many sources describe overscan as correcting for bias, but if the dark current for the camera is negligble, as it often is for cryogenically cooled cameras, then the overscan is essentially bias.\n",
     "\n",
-    "The read noise in the overscan is reduced by averaging over the overscan region. That will be covered in a later notebook; this one focuses on what the overscan looks like and how to decide whether to use it."
+    "The read noise in the overscan is reduced by averaging over the overscan region. That will be covered in a later notebook; this notebook focuses on what the overscan looks like and how to decide whether or not to use it."
    ]
   },
   {
@@ -46,7 +46,7 @@
     "\n",
     "The FITS header for these files includes the keyword `BIASSEC`, which indicates the nominal extent of the overscan region. Its value is `[2049:2080,1:4127]`, which indicates the overscan extends from 2048 to 2079 (Python indexing starts at 0, not 1 like in FITS) in the \"short\" direction and over the entire chip in the other direction. As we'll see shortly, the useful overscan region is smaller than this.\n",
     "\n",
-    "We'll focus here on the overscan in the side that is nominally 2048 wide; in Python that is the second index. The images below are a bias, dark, light and flat image. The latter are particularly helpful in evaluating how much of the overscan region is useful because the average pixel value in the exposed part of the camera is typically large.\n"
+    "We'll focus here on the overscan in the side that is nominally 2048 wide; in Python that's the second index. The images below are a bias, dark, light, and flat image. The latter are particularly helpful in evaluating how much of the overscan region is useful because the average pixel value in the exposed part of the camera is typically large.\n"
    ]
   },
   {
@@ -117,7 +117,7 @@
     "\n",
     "#### What happens if you don't use the overscan?\n",
     "\n",
-    "Nothing particularly bad. In the specific case above ignoring the overscan will shift the background level in the science image by roughly 20 counts. If, before doing science, the background of those images is subtracted, then this shift should be removed with the background."
+    "Nothing particularly bad. In the specific case above, ignoring the overscan will shift the background level in the science image by roughly 20 counts. If, before doing science, the background of those images is subtracted, then this shift should be removed with the background."
    ]
   },
   {
@@ -126,7 +126,7 @@
    "source": [
     "### Conclusion for case 1\n",
     "\n",
-    "The overscan is useful, but the useful overscan region extends from 2055 to the end of the chip rather than from 2048 to end of the chip as the FITS header claims. Put a little differently, the appropriate `BIASSEC` for these images is `[2056:2080,1:4127]` (note that FITS starts numbering at 1 instead of 0, so 2055 in Python is 2056 in FITS notation).\n",
+    "The overscan is useful, but the usable overscan region extends from 2055 to the end of the chip rather than from 2048 to end of the chip as the FITS header claims. Put a little differently, the appropriate `BIASSEC` for these images is `[2056:2080,1:4127]`. (Note that FITS starts numbering at 1 instead of 0, so 2055 in Python is 2056 in FITS notation.)\n",
     "\n",
     "If the science you are using requires knowing the counts to a precision of a count or two, and modeling the background in the science image isn't an option, consider using the overscan."
    ]
@@ -149,7 +149,7 @@
    "source": [
     "## Case 2: Thermo-electrically cooled Apogee Aspen CG16M\n",
     "\n",
-    "This is a low-end research grade CCD sold by Andor. Basic information is [here](), though you need to track down the description of the sensor chip, [KAF-16803 CCD](http://www.onsemi.com/pub/Collateral/KAF-16803-D.PDF) to find out that the overscan region of this 4096 × 4096 pixel camera extends from pixel 4097 to 4109 along one of the directions."
+    "This is a low-end, research-grade CCD sold by Andor. Basic information is [here](), though you need to track down the description of the sensor chip, [KAF-16803 CCD](http://www.onsemi.com/pub/Collateral/KAF-16803-D.PDF) to find out that the overscan region of this 4096 × 4096 pixel camera extends from pixel 4097 to 4109 along one of the directions."
    ]
   },
   {
@@ -194,19 +194,19 @@
     "\n",
     "#### Count values change quite a bit in the overscan region\n",
     "\n",
-    "This is clearest in the overscan for the flat. Not only is light leaking into the overscan, the overscan appears to be mostly light leakage. At best one pixel may be useful.\n",
+    "This is clearest in the overscan for the flat. Not only is light leaking into the overscan, the overscan appears to be mostly light leakage. One pixel may be useful at best.\n",
     "\n",
     "#### Overscan includes dark current \n",
     "\n",
-    "The overscan for the dark image in the figure above is roughly 10 counts higher than the counts for the bias. The dark current for this camera is roughly 0.01 counts/pixel/second. For a 1000 second dark exposure, the expected dark counts are about 10 which is the difference seen in the graph.\n",
+    "The overscan for the dark image in the figure above is roughly 10 counts higher than the counts for the bias. The dark current for this camera is roughly 0.01 counts/pixel/second. For a 1000 second dark exposure, the expected dark counts are about 10, which is the difference seen in the graph.\n",
     "\n",
     "#### There is an offset between the bias/dark and science/flat images\n",
     "\n",
-    "The offset in this camera is roughly 50 counts. It is large enough that one ought to be hesitant to use the overscan for this camera.\n",
+    "The offset in this camera is roughly 50 counts. It's large enough that one ought to be hesitant to use the overscan for this camera.\n",
     "\n",
     "#### The overscan counts are higher than the average bias counts\n",
     "\n",
-    "Note that for the bias image, counts are increasing up to the pixel where overscan starts and then levels out. It turns out that overscan counts are *higher* that the average of the bias counts, so subtracting the overscan would lead to a bias image that is negative. This is another reason to be suspicious of the overscan region on this camera."
+    "Note that for the bias image, counts increase up to the pixel where overscan starts and then level out. It turns out that overscan counts are *higher* than the average of the bias counts, so subtracting the overscan would lead to a bias image that is negative. This is another reason to be suspicious of the overscan region on this camera."
    ]
   },
   {
@@ -215,7 +215,7 @@
    "source": [
     "### Conclusion for case 2\n",
     "\n",
-    "Do not use the overscan in this case. There are serious issues with light leakage and large differences in the overscan counts between bias and science images. "
+    "Do not use the overscan in this case. There are serious issues with light leakage and large differences in the overscan counts between the bias and science images. "
    ]
   },
   {
