copy edited 01.09 reading images

--- a/notebooks/01.09-reading-images.ipynb
+++ b/notebooks/01.09-reading-images.ipynb
@@ -26,13 +26,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Working with diretories\n",
+    "## Working with directories\n",
     "\n",
-    "The cell below contains the path to the images. In this notebook we'll use that both to store the fake images we generate and to read images. In normal use you wouldn't start by writing images there, of course. \n",
+    "The cell below contains the path to the images. In this notebook we'll use it both to store the fake images we generate and to read images. In normal use, you wouldn't start by writing images there, however. \n",
     "\n",
-    "If the images are in the same directory as the notebook you can omit this, or set it to an empty string `''`. That case -- images in the same directory as the notebook -- is straightforward, but it is not at all uncommon to need to work with images in a different directory.\n",
+    "If the images are in the same directory as the notebook you can omit this, or set it to an empty string `''`. Having images in the same directory as the notebook is less complicated, but it's not at all uncommon to need to work with images in a different directory.\n",
     "\n",
-    "Later we'll look at how to generate the full path to an image (directory plus file name) in a way that will work on any platform. One of the approaches to loading images (using `ccdproc.ImageFileCollection`) lets you foprget about this, mostly."
+    "Later, we'll look at how to generate the full path to an image (directory plus file name) in a way that will work on any platform. One of the approaches to loading images (using `ccdproc.ImageFileCollection`) lets you mostly forget about this."
    ]
   },
   {
@@ -158,9 +158,9 @@
    "source": [
     "## Option 1: Reading a single image with `astropy.io.fits`\n",
     "\n",
-    "This option gives you the most flexibility but is the least adapted to CCD images specifically. What you read in is a list of FITS extensions; you must select the one you want then access the data or header as desired. \n",
+    "This option gives you the most flexibility but is the least adapted to CCD images specifically. What you read in is a list of FITS extensions; you must first select the one you want then access the data or header as desired. \n",
     "\n",
-    "We'll open up the first of the fake images, `img-0001.fits`. To combine that with the directory name we'll use Python 3's `pathlib`; it ensures that the path combination will work on Windows too."
+    "We'll open up the first of the fake images, `img-0001.fits`. To combine that with the directory name we'll use Python 3's `pathlib`, which ensures that the path combination will work on Windows too."
    ]
   },
   {
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `hdu_list` is a list of FITS Header-Data Units; in this case there is just one, containing both the image header and data, accessed as shown below."
+    "The `hdu_list` is a list of FITS Header-Data Units. In this case there is just one, containing both the image header and data, which can be accessed as shown below."
    ]
   },
   {
@@ -261,9 +261,9 @@
    "source": [
     "## Option 2:  Use `CCDData` to read in a single image\n",
     "\n",
-    "Astropy contains a `CCDData` object for representing a single image. It is not as flexible as using `astrop.io.fits` directly (for example, it assumes there is only one FITS extension and that it contains image data) but it sets up several properties that make the data easier to work with. \n",
+    "Astropy contains a `CCDData` object for representing a single image. It's not as flexible as using `astrop.io.fits` directly (for example, it assumes there is only one FITS extension and that it contains image data) but it sets up several properties that make the data easier to work with. \n",
     "\n",
-    "We'll read in the same single image we did in the example above, `img-0001.fits`"
+    "We'll read in the same single image we did in the example above, `img-0001.fits`."
    ]
   },
   {
@@ -279,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data and header are accssed in a way similar to the way you access it in an HDU returned by `astropy.io.fits`:"
+    "The data and header are accessed similarly to how you access it in an HDU returned by `astropy.io.fits`:"
    ]
   },
   {
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we didn't need to worry about using `pathlib` to combine the directory and file name, we just give the collection the name of the directory."
+    "Note that we didn't need to worry about using `pathlib` to combine the directory and file name, instead we give the collection the name of the directory."
    ]
   },
   {
@@ -373,7 +373,7 @@
    "source": [
     "### Summary of directory contents\n",
     "\n",
-    "The `summary` property provides an overview of the files in the directory; it is an astropy `Table`, so you can access columns in the usual way."
+    "The `summary` property provides an overview of the files in the directory: it's an astropy `Table`, so you can access columns in the usual way."
    ]
   },
   {
@@ -454,9 +454,9 @@
    "source": [
     "### Filtering and iterating over images\n",
     "\n",
-    "The convenient thing about `ImageFileCollection` is that it provides easy ways to filter or loop over files via FITS header keyword values. \n",
+    "The convenient thing about `ImageFileCollection` is that it provides convenient ways to filter or loop over files via FITS header keyword values. \n",
     "\n",
-    "For example, looping over just the flat files is just one line of code:"
+    "For example, looping over just the flat files is one line of code:"
    ]
   },
   {
@@ -483,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instead of iterating over HDUs, as in the example above, you can iterate over just the headers (with `.headers`) or just the data (with `.data`). You can use any FITS keyword from the header as a keyword for selecting the images you want. In addition, you can return the file name while iterating also."
+    "Instead of iterating over HDUs, as in the example above, you can iterate over just the headers (with `.headers`) or just the data (with `.data`). You can use any FITS keyword from the header as a keyword for selecting the images you want. In addition, you can return the file name while also iterating."
    ]
   },
   {
@@ -512,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [documentation for `ImageFileCollection`](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html) describes more of its capabilities; it can also automatically save a copy of each image as you iterate over them, for example."
+    "The [documentation for `ImageFileCollection`](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html) describes more of its capabilities. `ImageFileCollection` can automatically save a copy of each image as you iterate over them, for example."
    ]
   },
   {
@@ -606,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
