--- a/notebooks/02.01-Calibrating-bias-images.ipynb
+++ b/notebooks/02.01-Calibrating-bias-images.ipynb
@@ -13,11 +13,18 @@
    "source": [
     "The purpose of calibrating bias images is three-fold:\n",
     "\n",
-    "+ Subtract overscan if you have decided your science will be better if you subtract overscan. See [this discussion of overscan]() for some guidance. \n",
+    "+ Subtract overscan if you have decided your science will be better if you subtract overscan. See [this discussion of overscan](01.08-Overscan.ipynb) for some guidance. \n",
     "+ Trim the overscan region off of the image if it is present, regardless of whether you have chosen to subtract the overscan.\n",
     "+ Combine the bias images into a \"combined\" bias to be used in calibrating the rest of the images. The purpose of combining several images is to reduce as much as possible the read noise in the combined bias.\n",
     "\n",
     "The approach in this notebook will be to reduce a single image, look at the effects the reduction step had on that image and then demonstrate how to calibrate a folder containing several images of that type."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### TODO: remove the reload stuff below"
    ]
   },
   {
@@ -56,7 +63,7 @@
    "source": [
     " ## Decide where to put your calibrated images\n",
     " \n",
-    " Though it is possible to overwrite your raw data with calibrated images that is a bad idea. Here we define a folder called `reduced` that will contain the calibrated data and create it if it doesn't exist."
+    "Though it is possible to overwrite your raw data with calibrated images that is a bad idea. Here we create a folder called `reduced` that will contain the calibrated data and create it if it doesn't exist."
    ]
   },
   {
@@ -66,7 +73,7 @@
    "outputs": [],
    "source": [
     "calibrated_data = Path('.', 'reduced')\n",
-    "calibrated_data.mkdir(exists_ok=True)"
+    "calibrated_data.mkdir(exist_ok=True)"
    ]
   },
   {
@@ -100,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files.summary['file', 'imagetyp', 'filter', 'exptime']"
+    "files.summary['file', 'imagetyp', 'filter', 'exptime', 'naxis1', 'naxis2']"
    ]
   },
   {
@@ -136,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subtract and then trim the overscan (one sample image)\n",
+    "### Determine overscan region\n",
     "\n",
     "Please see the discussion of this camera in [the overscan notebook](01.08-Overscan.ipynb#Case-1:-Cryogenically-cooled-Large-Format-Camera-(LFC)-at-Palomar) for the appropriate overscan regioin to use for this camera. Note, in particular, that it differs from the the value given in the `BIASSEC` keyword in the header of the images."
    ]
@@ -152,9 +159,7 @@
     "\n",
     "First, let's see what the values of `BIASSEC` which sometimes (but not always) indicates that there is is overscan and which part of the chip is the overscan, and `CCDSEC`, which is sometimes, but not always present, and indicates which part of the chip light hit.\n",
     "\n",
-    "Note that neither of these are standard; sometimes, for example, `trimsec` is used instead of `ccdsec`, and there are likely other variants. Some images may have neither keyword in the header. That does not necessary indicate that ovserscan isn't present. The best advice is to carefully check the documentation for the camer you are using. \n",
-    "\n",
-    "## NEED TO FIX BECAUSE APPARENTLY THE DATASEC IS MEANINGLESS"
+    "Note that neither of these are standard; sometimes, for example, `trimsec` is used instead of `ccdsec`, and there are likely other variants. Some images may have neither keyword in the header. That does not necessary indicate that ovserscan isn't present. The best advice is to carefully check the documentation for the camer you are using. "
    ]
   },
   {
@@ -172,12 +177,30 @@
    "source": [
     "The fits header claims the overscan extends from the 2049th column to the end of the image (this is one-based indexing) and that the part of the image exposed to light extends over all rows and from the first column to the 2048$^{th}$ column (again, this is one-indexed).\n",
     "\n",
-    "Unfortunately, there are two differences between FITS and Python in terms of indexing:\n",
+    "There are two differences between FITS and Python in terms of indexing:\n",
     "\n",
     "+ Python indexes are zero-based (i.e. numbering starts at zero), FITS indexes are one-based (i.e. numbering starts at 1).\n",
     "+ The *order* of the indexes is swapped.\n",
     "\n",
     "For example, the **FITS** representation of the part of the chip exposed to light is `[1:2048,1:4128]`. To access that part of the data from a numpy array in **Python**, switch the order so that the indexing looks like this: `[0:4128, 0:2048]` (or, more compactly `[:, :2048]`). Note that the *ending* indexes given here for python are correct because the second part of a range (after the colon) is *not included* in the array slice. For example, `0:2048` starts at 0 (the first pixel) and goes up to but not including 2048, so the last pixel included is `2047` (the 2048$^{th}$ pixel)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As discussed in [the overscan notebook](01.08-Overscan.ipynb#Case-1:-Cryogenically-cooled-Large-Format-Camera-(LFC)-at-Palomar), the useful overscan region for this camera starts at the 2055$^th$ column, not column 2049 as indicated by the `BIASSEC` keyword in the header. This situation is not unusual; column 2049 is the first of the columns masked by the manufacturer from light but there is some leakage into this region from the rest of the CCD.\n",
+    "\n",
+    "If you are going to overscan you need to carefully emaine the overscan in a few representative images to understand which part of the overscan to use.\n",
+    "\n",
+    "In what follow, we will use for the overscan the region (Python/numpy indexing) `[:, 2055:]`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subtract and then trim the overscan (one sample image)"
    ]
   },
   {
@@ -250,7 +273,10 @@
    "source": [
     "### Discussion\n",
     "\n",
-    "Visually, the images look nearly identical before and after calibration. The only prominent difference is a shift in the pixel values, as one would expect from subtracting the same value from each pixel in an image. It simply shifts the zero point."
+    "Visually, the images look nearly identical before and after calibration. The only prominent difference is a shift in the pixel values, as one would expect from subtracting the same value from each pixel in an image. It simply shifts the zero point. \n",
+    "\n",
+    "There is ones other important difference between the images: the input image uses 32MB of memory while the calibrated, overscan-subtracted image uses roughly 128MB. The input image is stored as unsigned 16-bit integers; the calibrated image is stored as floating point numbers, which default in python to 64-bit floats. The memory size is also the size the files will have when written to disk (ignoring any compression). One can reduce the memory and disk footprint by changing the `dtype` of the image: `trimmed_bias.dtype = 'float32'`. It is best to do this just before writing the image out because arithmetic operations on the image may convert its dtype back to `float64`.\n",
+    "\n"
    ]
   },
   {
@@ -259,7 +285,7 @@
    "source": [
     "### Processing a folder of bias images\n",
     "\n",
-    "Processing each of the bias images individually would be tedious, at best. Instead, we can use the `ImageFileCollection` we created above to loop over only the bias images, saving each in the folder `calibrated_data`."
+    "Processing each of the bias images individually would be tedious, at best. Instead, we can use the [`ImageFileCollection`](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html) we created above to loop over only the bias images, saving each in the folder `calibrated_data`. In this example the files are saved uncompressed because the Python library for compressing gzip files is extremely slow."
    ]
   },
   {
@@ -270,21 +296,28 @@
    },
    "outputs": [],
    "source": [
-    "for ccd, file_name in files.ccds(imagetyp='BIAS', \n",
-    "                                 ccd_kwargs={'unit': 'adu'},\n",
-    "                                 return_fname=True\n",
+    "for ccd, file_name in files.ccds(imagetyp='BIAS',            # Just get the bias frames\n",
+    "                                 ccd_kwargs={'unit': 'adu'}, # CCDData requires a unit for the image if \n",
+    "                                                             # it is not in the header\n",
+    "                                 return_fname=True           # Provide the file name too.\n",
     "                                ):\n",
-    "    print('foo', file_name)\n",
+    "    save_name, _ = file_name.split('.gz')\n",
+    "    \n",
+    "    # Subtract the overscan\n",
     "    ccd = ccdp.subtract_overscan(ccd, overscan=first_bias[:, 2055:], median=True)\n",
+    "    \n",
+    "    # Trim the overscan\n",
     "    ccd = ccdp.trim_image(ccd[:, :2048])\n",
-    "    ccd.write(calibrated_data / file_name)"
+    "    \n",
+    "    # Save the result\n",
+    "    ccd.write(calibrated_data / save_name)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's check that we really did get the images we expect by creating an `ImageFileCollection` for the reduced folder and displaying the size of each image. We are expecting the images to be 2048 × 4148, and that there will be the same number of reduced bias images as input bias images (six)."
+    "Let's check that we really did get the images we expect by creating an [`ImageFileCollection`](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html) for the reduced folder and displaying the size of each image. We are expecting the images to be 2048 × 4128, and that there will be the same number of reduced bias images as input bias images (six)."
    ]
   },
   {
@@ -301,15 +334,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example without overscan subtraction"
+    "## Without overscan subtraction"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "If you are not subtracting overscan then the only manipulation you may need to do is trimming the overscan from the images. If there is no overscan region in your images then even that is unnecessary."
+   ]
   }
  ],
  "metadata": {
