Update bias combination notebook

--- a/notebooks/02.04-Combine-bias-images-to-make-master.ipynb
+++ b/notebooks/02.04-Combine-bias-images-to-make-master.ipynb
@@ -48,6 +48,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The remained of this notebook assumes the calibrated bias images are in the folder in the cell below."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -89,7 +96,7 @@
    "source": [
     "calibrated_biases = reduced_images.files_filtered(imagetyp='bias', include_path=True)\n",
     "\n",
-    "combined_bias = ccdp.combine(calibrated_biases, output_file=calibrated_images / 'combined_bias.fit.gz',\n",
+    "combined_bias = ccdp.combine(calibrated_biases, output_file=calibrated_images / 'combined_bias.fit',\n",
     "                             method='average',\n",
     "                             sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
     "                             sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
@@ -103,7 +110,7 @@
    "source": [
     "## Result\n",
     "\n",
-    "A single calibrated image and the combined image are shown below."
+    "A single calibrated image and the combined image are shown below. There is significant two-dimensional structure in the bias that cannot easily be removed by subtracting only the overscan in the next image reduction steps. It takes little time to acquire bias images and doing so will result in higher quality science images."
    ]
   },
   {
@@ -119,13 +126,6 @@
     "show_image(combined_bias.data[500:1000, 500:1000], cmap='gray', ax=ax2, fig=fig)\n",
     "ax2.set_title('{} bias images combined'.format(len(calibrated_biases)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
