Add plot of pixel distribution

--- a/notebooks/03.01-Dark-current-The-ideal-case.ipynb
+++ b/notebooks/03.01-Dark-current-The-ideal-case.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from scipy import stats\n",
     "\n",
     "%matplotlib inline\n",
     "from matplotlib import pyplot as plt\n",
@@ -71,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dark_rate = 0.01\n",
+    "dark_rate = 0.1\n",
     "gain = 1.5"
    ]
   },
@@ -93,7 +94,7 @@
    "outputs": [],
    "source": [
     "n_images = 20\n",
-    "n_pixels = 20\n",
+    "n_pixels = 10\n",
     "pixels = np.random.randint(50, high=190, size=n_pixels)\n",
     "pixel_values = np.zeros(n_images)\n",
     "pixel_averages = np.zeros(n_images)\n",
@@ -123,6 +124,55 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "h = plt.hist(a_dark.flatten(), bins=10, align='left', density=True);\n",
+    "bins = h[1]\n",
+    "pois = stats.poisson(dark_rate * exposure / gain)\n",
+    "pois_x = np.arange(0, 20, 1)\n",
+    "\n",
+    "plt.plot(pois_x, pois.pmf(pois_x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Obviously there is some stuff I don't understand about Poisson distributions "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Though the graph above *is* looking better now...\n",
+    "\n",
+    "It evaluates to zero at non-integer k (which I guess makes sense) and I should really center the pixel histograms on integers **OR** use a much higher dark current or exposure time so the expected counts are higher.\n",
+    "\n",
+    "For fun, a few Poisson plots below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.arange(0, 20, 1)\n",
+    "plt.plot(x, pois.pmf(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This looks like a normalized PDF to me."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -142,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
