Add discussion of read noise and how it affects dark counts in the ideal case

--- a/notebooks/03.01-Dark-current-The-ideal-case.ipynb
+++ b/notebooks/03.01-Dark-current-The-ideal-case.ipynb
@@ -19,7 +19,7 @@
     "%matplotlib inline\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "from image_sim import dark_current\n"
+    "from image_sim import dark_current, read_noise\n"
    ]
   },
   {
@@ -58,12 +58,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Illustration\n",
+    "### Illustration with dark current only, no read noise\n",
     "\n",
     "For the purposes of illustrating some of the properties of dark current and dark frames we'll generated some simulated images in which the counts are due to dark current alone. We'll use these values:\n",
     "\n",
-    "+ Dark current is $d_c(T) = 0.01 e^-$/pixel/sec\n",
-    "+ Gain is $g = 1.5 e^-$/ADU"
+    "+ Dark current is $d_c(T) = 0.1 e^-$/pixel/sec\n",
+    "+ Gain is $g = 1.5 e^-$/ADU\n",
+    "+ Read noise is 0 $e^-$"
    ]
   },
   {
@@ -73,7 +74,8 @@
    "outputs": [],
    "source": [
     "dark_rate = 0.1\n",
-    "gain = 1.5"
+    "gain = 1.5\n",
+    "read_noise_electrons = 0"
    ]
   },
   {
@@ -82,9 +84,9 @@
    "source": [
     "#### Dark current is a random process\n",
     "\n",
-    "The dark counts in a dark frame are counts and so they follow a Poisson distribution. The plot below shows the dark current in the pixel `[100, 100]` in 20 different simulated images each with exposure time 100 sec. Note that the counts vary from image to image but that the average is very close to the expected value.\n",
+    "The dark counts in a dark frame are counts and so they follow a Poisson distribution. The plot below shows the dark current in a number of randomly chosen pixels in 20 different simulated images each with exposure time 100 sec. Note that the counts vary from image to image but that the average is very close to the expected value.\n",
     "\n",
-    "The expected value of the dark counts for this image are $d_e(t)/g = 0.667~$counts."
+    "The expected value of the dark counts for this image are $d_e(t)/g = 6.67~$counts."
    ]
   },
   {
@@ -93,13 +95,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "exposure = 100\n",
+    "\n",
     "n_images = 20\n",
     "n_pixels = 10\n",
+    "image_size = 500\n",
+    "\n",
     "pixels = np.random.randint(50, high=190, size=n_pixels)\n",
     "pixel_values = np.zeros(n_images)\n",
     "pixel_averages = np.zeros(n_images)\n",
-    "exposure = 100\n",
-    "base_image = np.zeros([200, 200])\n",
+    "base_image = np.zeros([image_size, image_size])\n",
     "\n",
     "plt.figure(figsize=(20, 10))\n",
     "for pixel in pixels:\n",
@@ -113,10 +118,24 @@
     "plt.plot(pixel_averages / n_pixels, \n",
     "         linewidth=3,\n",
     "         label='Average over {} pixels'.format(n_pixels))\n",
+    "# plt.xlim(0, n_images - 1)\n",
+    "plt.hlines(dark_rate * exposure / gain, *plt.xlim(), \n",
+    "           linewidth=3, \n",
+    "           label=\"Expected counts\")\n",
     "plt.xlabel('Image number')\n",
     "plt.ylabel('Counts due to dark current')\n",
-    "plt.xlim(0, n_images - 1)\n",
-    "plt.legend()"
+    "\n",
+    "plt.legend()\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The distribution of dark counts follows a Poisson distribution\n",
+    "\n",
+    "The distribution below shows a normalized histogram of number of pixels as a function of dark counts in each pixel for one of the simulated dark frames. Overlaid on the histogram is a Poisson distribution with a mean of $d_e(t_{exp}) = d_C(T) * t_{exp} / g$, where $t_{exp}$ is the exposure time."
    ]
   },
   {
@@ -125,30 +144,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h = plt.hist(a_dark.flatten(), bins=10, align='left', density=True);\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "\n",
+    "\n",
+    "h = plt.hist(a_dark.flatten(), bins=20, align='mid', density=True, label=\"Histogram of dark current counts\");\n",
     "bins = h[1]\n",
     "pois = stats.poisson(dark_rate * exposure / gain)\n",
     "pois_x = np.arange(0, 20, 1)\n",
     "\n",
-    "plt.plot(pois_x, pois.pmf(pois_x))"
+    "plt.plot(pois_x, pois.pmf(pois_x), \n",
+    "         label=\"Poisson dsitribution, mean of {:5.2f} counts\".format(dark_rate * exposure / gain))  \n",
+    "\n",
+    "plt.xlabel(\"Dark counts in {} exposure\".format(exposure))\n",
+    "plt.ylabel(\"Number of pixels (area normalized to 1)\")\n",
+    "plt.legend()\n",
+    "plt.grid()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Obviously there is some stuff I don't understand about Poisson distributions "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Though the graph above *is* looking better now...\n",
+    "### Illustration with dark current *and* read noise\n",
     "\n",
-    "It evaluates to zero at non-integer k (which I guess makes sense) and I should really center the pixel histograms on integers **OR** use a much higher dark current or exposure time so the expected counts are higher.\n",
+    "Now let's run through the same couple of plots with a non-zero read noise. For the sake of illustration, we'll look at two cases:\n",
     "\n",
-    "For fun, a few Poisson plots below."
+    "1. Moderate read noise of 10 $e^-$ per read, typical of a low-end research-grade CCD\n",
+    "2. Low read noise of 1 $e^-$ per read\n",
+    "\n",
+    "In both cases we'll continue with the parameters above to generate our frames:\n",
+    "\n",
+    "+ Dark current is $d_c(T) = 0.1 e^-$/pixel/sec\n",
+    "+ Gain is $g = 1.5 e^-$/ADU\n",
+    "+ Exposure time 100 sec\n",
+    "\n",
+    "With those choices the expected dark count is 6.67 count, which is 10 $e^-$. That is, not coincidentally, one of the values for read noise that was chosen."
    ]
   },
   {
@@ -157,15 +187,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.arange(0, 20, 1)\n",
-    "plt.plot(x, pois.pmf(x))"
+    "high_read_noise = 10"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "This looks like a normalized PDF to me."
+    "pixels = np.random.randint(50, high=190, size=n_pixels)\n",
+    "pixel_values = np.zeros(n_images)\n",
+    "pixel_averages = np.zeros(n_images)\n",
+    "base_image = np.zeros([image_size, image_size])\n",
+    "\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "for pixel in pixels:\n",
+    "    for n in range(n_images):\n",
+    "        a_dark = dark_current(base_image, dark_rate, exposure, gain=gain, hot_pixels=False)\n",
+    "        a_dark = a_dark + read_noise(base_image, high_read_noise, gain=gain)\n",
+    "        pixel_values[n] = a_dark[pixel, pixel]\n",
+    "\n",
+    "    plt.plot(pixel_values, label='pixel [{0}, {0}]'.format(pixel), alpha=0.5)\n",
+    "    pixel_averages += pixel_values\n",
+    "\n",
+    "plt.plot(pixel_averages / n_pixels, \n",
+    "         linewidth=3,\n",
+    "         label='Average over {} pixels'.format(n_pixels))\n",
+    "# plt.xlim(0, n_images - 1)\n",
+    "plt.hlines(dark_rate * exposure / gain, *plt.xlim(), \n",
+    "           linewidth=3, \n",
+    "           label=\"Expected counts\")\n",
+    "plt.xlabel('Image number')\n",
+    "plt.ylabel('Counts due to dark current')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 10))\n",
+    "\n",
+    "\n",
+    "h = plt.hist(a_dark.flatten(), bins=20, align='mid', density=True, label=\"Histogram of dark current counts\");\n",
+    "bins = h[1]\n",
+    "expected_mean_dark = dark_rate * exposure / gain\n",
+    "pois = stats.poisson(expected_mean_dark)\n",
+    "pois_x = np.arange(0, 20, 1)\n",
+    "\n",
+    "plt.plot(pois_x, pois.pmf(pois_x), \n",
+    "         label=\"Poisson dsitribution, mean of {:5.2f} counts\".format(dark_rate * exposure / gain)) \n",
+    "gauss = stats.norm(loc=expected_mean_dark, scale=high_read_noise / gain)\n",
+    "gauss_x = np.linspace(*plt.xlim())\n",
+    "plt.plot(gauss_x, gauss.pdf(gauss_x), label='Gaussian, standdard dev is read noise in counts') \n",
+    "plt.xlabel(\"Dark counts in {} exposure\".format(exposure))\n",
+    "plt.ylabel(\"Number of pixels (area normalized to 1)\")\n",
+    "plt.legend()\n",
+    "plt.grid()"
    ]
   },
   {
