--- a/notebooks/03.01-Dark-current-The-ideal-case.ipynb
+++ b/notebooks/03.01-Dark-current-The-ideal-case.ipynb
@@ -182,12 +182,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "high_read_noise = 10"
+    "### Read noise is about the same as the expected dark current\n",
+    "\n",
+    "In this first case, the read noise and the dark current are both 10$e^-$."
    ]
   },
   {
@@ -196,20 +196,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "high_read_noise = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "pixels = np.random.randint(50, high=190, size=n_pixels)\n",
     "pixel_values = np.zeros(n_images)\n",
     "pixel_averages = np.zeros(n_images)\n",
     "base_image = np.zeros([image_size, image_size])\n",
+    "darks = np.zeros([n_images, image_size, image_size])\n",
     "\n",
     "plt.figure(figsize=(20, 10))\n",
+    "for n in range(n_images):\n",
+    "    darks[n] = dark_current(base_image, dark_rate, exposure, gain=gain, hot_pixels=False)\n",
+    "    darks[n] = darks[n] + read_noise(base_image, high_read_noise, gain=gain)\n",
     "for pixel in pixels:\n",
     "    for n in range(n_images):\n",
-    "        a_dark = dark_current(base_image, dark_rate, exposure, gain=gain, hot_pixels=False)\n",
-    "        a_dark = a_dark + read_noise(base_image, high_read_noise, gain=gain)\n",
-    "        pixel_values[n] = a_dark[pixel, pixel]\n",
-    "\n",
+    "        pixel_values[n] = darks[n, pixel, pixel]\n",
     "    plt.plot(pixel_values, label='pixel [{0}, {0}]'.format(pixel), alpha=0.5)\n",
     "    pixel_averages += pixel_values\n",
+    "\n",
+    "image_average = darks.mean(axis=0)\n",
     "\n",
     "plt.plot(pixel_averages / n_pixels, \n",
     "         linewidth=3,\n",
@@ -234,7 +248,8 @@
     "plt.figure(figsize=(20, 10))\n",
     "\n",
     "\n",
-    "h = plt.hist(a_dark.flatten(), bins=20, align='mid', density=True, label=\"Histogram of dark current counts\");\n",
+    "h = plt.hist(darks[-1].flatten(), bins=20, align='mid', density=True, \n",
+    "             label=\"Histogram of dark current counts, single dark frame\");\n",
     "bins = h[1]\n",
     "expected_mean_dark = dark_rate * exposure / gain\n",
     "pois = stats.poisson(expected_mean_dark)\n",
@@ -242,13 +257,142 @@
     "\n",
     "plt.plot(pois_x, pois.pmf(pois_x), \n",
     "         label=\"Poisson dsitribution, mean of {:5.2f} counts\".format(dark_rate * exposure / gain)) \n",
+    "\n",
+    "plt.xlim(-20, 30)\n",
     "gauss = stats.norm(loc=expected_mean_dark, scale=high_read_noise / gain)\n",
     "gauss_x = np.linspace(*plt.xlim())\n",
     "plt.plot(gauss_x, gauss.pdf(gauss_x), label='Gaussian, standdard dev is read noise in counts') \n",
     "plt.xlabel(\"Dark counts in {} exposure\".format(exposure))\n",
     "plt.ylabel(\"Number of pixels (area normalized to 1)\")\n",
     "plt.legend()\n",
+    "\n",
+    "plt.ylim(0, 1)\n",
+    "\n",
     "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This dark frame measures noise, not dark current \n",
+    "\n",
+    "The pixel distribution is clearly a Gaussian distribution with a width determined by the read noise, not the underlying Poisson distribution that a dark frame is trying to measure. The only way around this (assuming the dark current is large enough that it needs to be subtracted at all) is to make the exposure long enough that the expected counts exceed the dark current.\n",
+    "\n",
+    "We explore that case below by adding in a much smaller amount of noise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 10))\n",
+    "\n",
+    "\n",
+    "h = plt.hist(image_average.flatten(), bins=20, align='mid', density=True, label=\"Histogram of dark current counts\");\n",
+    "bins = h[1]\n",
+    "expected_mean_dark = dark_rate * exposure / gain\n",
+    "pois = stats.poisson(expected_mean_dark * n_images)\n",
+    "pois_x = np.arange(0, 300, 1)\n",
+    "\n",
+    "new_area = np.sum(1/n_images * pois.pmf(pois_x))\n",
+    "\n",
+    "plt.plot(pois_x / n_images, pois.pmf(pois_x) / new_area, \n",
+    "         label=\"Poisson dsitribution, mean of {:5.2f} counts\".format(dark_rate * exposure / gain)) \n",
+    "plt.xlim(-20, 30)\n",
+    "\n",
+    "gauss = stats.norm(loc=expected_mean_dark, scale=high_read_noise / gain)\n",
+    "gauss_x = np.linspace(*plt.xlim(), num=1000)\n",
+    "plt.plot(gauss_x, gauss.pdf(gauss_x), label='Gaussian, standdard dev is read noise in counts') \n",
+    "plt.xlabel(\"Dark counts in {} exposure\".format(exposure))\n",
+    "plt.ylabel(\"Number of pixels (area normalized to 1)\")\n",
+    "plt.legend()\n",
+    "plt.ylim(0, 1)\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OOF! WHY IS THIS NOT A POISSON DISTRIBUTION?\n",
+    "\n",
+    "## Maybe the average of a bunch of Poisson distributions is not a Poisson distribution and is instead a Gaussian?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nope, not a gaussian either, but not a Poisson. Note below that the *sum* is a Poisson with mean value `n_images` times larger than the single-image value. To scale to the average, calculate the Poisson distribution with mean value $N_{images} d_C(t)$, plot that as a function of `counts/n_images`, and normalize the resulting distribution.\n",
+    "\n",
+    "##### Also, it *is* the expected distribution for a sum of Poissons IF the read noise is zero or small."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot below shows properly calculated Poisson and Gaussian distributions for sum of each type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 10))\n",
+    "\n",
+    "\n",
+    "h = plt.hist((n_images * image_average).flatten(), bins=20, align='mid', density=True, label=\"Histogram of dark current counts\");\n",
+    "bins = h[1]\n",
+    "expected_mean_dark = dark_rate * exposure / gain\n",
+    "pois = stats.poisson(expected_mean_dark * n_images)\n",
+    "pois_x = np.arange(0, 300, 1)\n",
+    "\n",
+    "plt.plot(pois_x, pois.pmf(pois_x), \n",
+    "         label=\"Poisson dsitribution, mean of {:5.2f} counts\".format(dark_rate * exposure / gain)) \n",
+    "\n",
+    "\n",
+    "gauss = stats.norm(loc=expected_mean_dark * n_images, scale=high_read_noise / gain * np.sqrt(n_images))\n",
+    "gauss_x = np.linspace(*plt.xlim())\n",
+    "\n",
+    "\n",
+    "plt.plot(gauss_x, gauss.pdf(gauss_x), label='Gaussian, standdard dev is read noise in counts') \n",
+    "plt.xlabel(\"Dark counts in {} exposure\".format(exposure))\n",
+    "plt.ylabel(\"Number of pixels (area normalized to 1)\")\n",
+    "plt.legend()\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read noise much lower than dark current \n",
+    "\n",
+    "In this case the read noise is 1 $e^-$, lower than the expected dark current for this exposure time, 10$e^-$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "low_read_noise = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_average.shape"
    ]
   },
   {
